--- a/accueil.html
+++ b/accueil.html
@@ -26,6 +26,9 @@
     </header>
 
     <body>
+        <div class="loader">
+            <div class="Circle"></div>
+        </div>
 
         <div class="SectionFonctionnement">   <!--////Section FONCTIONNEMENT////-->
                 <h2 class="MargeG">Fonctionnement</h2>
