--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -19,6 +19,10 @@
     </header>
 
     <body>
+        <div class="loader">
+            <div class="Circle"></div>
+        </div>
+        
       <section class="CentrerColumn">  
 
         <div class="BlocImage"><div class="Image"></div></div>
