Mise à niveau de toute les pages du P3

--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -30,7 +30,7 @@
         <div class="SectionMenu">
             <div class="CentrerRow TitrePosition">
                 <h1>À la Française </h1>
-                <i class="fa-regular fa-heart fa-xl HeartIcone"></i>
+                <i class="fa-regular fa-heart HeartIcone"></i>
       
             </div>
        
@@ -121,7 +121,7 @@
 
         <section class="SectionFooter">
 
-            <h3 class="Blanc">ohmyfood</h3> 
+            <h3 class="ohmyfood">ohmyfood</h3> 
             <ul>
                 <li class="Blanc Liste"><i class="fa-sharp fa-solid fa-utensils fa-xs MargeD"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="Blanc Liste"><i class="fa-solid fa-handshake-angle fa-xs MargeD2"></i><a href="#">Devenir partenaire</a></li>
