--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -28,7 +28,7 @@
         <div class="BlocImage"><div class="Image"></div></div>
        
         <div class="SectionMenu">
-            <div class="CentrerRow TitrePosition"><h1>Le délice des sens </h1><i class="fa-regular fa-heart fa-xl HeartIcone"></i></div>
+            <div class="CentrerRow TitrePosition"><h1>Le délice des sens </h1><i class="fa-regular fa-heart HeartIcone"></i></div>
        
             <!--//////////Section des entrées///////////:-->
 
@@ -109,7 +109,7 @@
 
         <section class="SectionFooter">
 
-            <h3 class="Blanc">ohmyfood</h3> 
+            <h3 class="ohmyfood">ohmyfood</h3> 
             <ul>
                 <li class="Blanc Liste"><i class="fa-sharp fa-solid fa-utensils fa-xs MargeD"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="Blanc Liste"><i class="fa-solid fa-handshake-angle fa-xs MargeD2"></i><a href="#">Devenir partenaire</a></li>
