Intégration de mailto au clic sur contact, apparition progressive sur l'animation des menus, fin du P3

--- a/accueil.html
+++ b/accueil.html
@@ -148,8 +148,7 @@
                 <li class="Blanc Liste"><i class="fa-sharp fa-solid fa-utensils fa-xs MargeD"></i><a class="Blanc" href="#">Proposer un restaurant</a></li>
                 <li class="Blanc Liste"><i class="fa-solid fa-handshake-angle fa-xs MargeD2"></i><a class="Blanc" href="#">Devenir partenaire</a></li>
                 <li class=" Liste"><a class="Blanc" href="#">Mentions légales</a></li>
-                <li class=" Liste"><a class="Blanc" href="#">Contact</a></li>
+                <li class=" Liste"><a class="Blanc" href="mailto: Ohmyfood_contact@gmail.com">Contact</a></li>
             </ul>
                   
     </footer>
-
