Finalisation du P3, ajout du délai sur les éléments du menu + rrotation sur l'icone de validation + opacité des boutons au survol

--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -35,7 +35,7 @@
                 <!--//////////Section des entrées///////////:-->
 
                 <div class="ResponsivDesktop">
-                    <section class="EntreePlat">  
+                    <section class="Entree animation1">  
 
                         <h2 class="GreenLine">ENTRÉES</h2>
 
@@ -112,7 +112,7 @@
 
                     <!--//////////Section des Plats///////////:-->
 
-                    <section class="EntreePlat">
+                    <section class="Plat animation2">
 
                         <h2 class="GreenLine">PLATS</h2>
                         <div class="CentrerColumn">
@@ -172,7 +172,7 @@
 
                 <!--//////////Section des Desserts///////////:-->
 
-                <section class="Dessert">
+                <section class="Dessert animation3">
 
                     <h2 class="GreenLine">DESSERTS</h2>
                     <div class="CentrerColumn">
