--- a/accueil.html
+++ b/accueil.html
@@ -34,15 +34,15 @@
                 <h2 class="MargeG">Fonctionnement</h2>
             <div class="CentrerColumn FonctionnementRow"> 
 
-                <div class="BoutonFonctionnement CentrerRow MargeH ">
+                <div class="BoutonFonctionnement CentrerRow">
                     <div class="Number CentrerRow">1</div><i class="fa-solid fa-mobile-screen-button fa-xl MargeD"></i><p class="Bold">Choisissez un restaurant</p>
                 </div> <!--Bouton restaurant-->
 
-                <div class="BoutonFonctionnement CentrerRow MargeH ">
+                <div class="BoutonFonctionnement CentrerRow">
                     <div class="Number CentrerRow">2</div><i class="fa-solid fa-bars fa-lg MargeD" ></i><p class="Bold">Composez votre menu</p>
                 </div> <!--Bouton menu-->
 
-                <div class="BoutonFonctionnement CentrerRow MargeH">
+                <div class="BoutonFonctionnement CentrerRow">
                     <div class="Number CentrerRow">3</div><i class="fa-sharp fa-solid fa-store fa-lg MargeD"></i><p class="Bold">Degustez au restaurant</p>
                 </div> <!--Bouton deguster-->
 
@@ -57,7 +57,7 @@
                 <div class="ResponsivRow">   <!--bloc pour aligner 2 cartes dans la partie responsive-->  
 
                     <a href="LaPaletteDuGout.html">
-                    <div class="Carte MargeB MargeDResponsiv">   <!--Carte la palette du gout-->    
+                    <div class="Carte MargeDResponsiv">   <!--Carte la palette du gout-->    
 
                         <div class="BlocImage">
                             <div class="Image1"></div>
@@ -75,7 +75,7 @@
                     </a>
 
                     <a href="LaNoteEnchantee.html">
-                    <div class="Carte MargeB">    <!--Carte La note enchantée-->    
+                    <div class="Carte">    <!--Carte La note enchantée-->    
 
                         <div class="BlocImage">
                             <div class="Image2"></div>
@@ -99,7 +99,7 @@
                 <div class="ResponsivRow">   <!--bloc pour aligner 2 cartes dans la partie responsive--> 
 
                     <a href="ALaFrancaise.html">
-                    <div class="Carte MargeB MargeDResponsiv">    <!--Carte A la Française-->     
+                    <div class="Carte MargeDResponsiv">    <!--Carte A la Française-->     
 
                         <div class="BlocImage">
                             <div class="Image3"></div>
@@ -116,7 +116,7 @@
                     </a>
 
                     <a href="LeDeliceDesSens.html">
-                    <div class="Carte ">    <!--Carte Le délice des sens-->   
+                    <div class="Carte">    <!--Carte Le délice des sens-->   
 
                         <div class="BlocImage">
                             <div class="Image4"></div>
