--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -34,7 +34,7 @@
                 <!--//////////Section des entrées///////////:-->
 
                 <div class="ResponsivDesktop">
-                    <section class="EntreePlat">   
+                    <section class="Entree animation1">   
                 
                         <h2 class="GreenLine">ENTRÉES</h2>
 
@@ -95,7 +95,7 @@
                     </section>     
                     <!--//////////Section des Plats///////////:-->
 
-                    <section class="EntreePlat">
+                    <section class="Plat animation2">
                         <h2 class="GreenLine">PLATS</h2>
                         <div class="CentrerColumn">
 
@@ -153,7 +153,7 @@
 
                 <!--//////////Section des Desserts///////////:-->
 
-                <section class="Dessert">
+                <section class="Dessert animation3">
 
                     <h2 class="GreenLine">DESSERTS</h2>
                     <div class="CentrerColumn">
