--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-			<link rel="stylesheet" type="text/css" href="accueil.styles.css">
+			<link rel="stylesheet" type="text/css" href="Index.styles.css">
             <link rel="stylesheet" media="screen and (max-width: 768px)" href="_media.css"/>
             <title>Ohmyfood Accueil</title>
 			<script src="https://kit.fontawesome.com/3313ba1e29.js" crossorigin="anonymous"></script>	<!--fontawesome icones-->
