--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -12,7 +12,7 @@
     <header class="Header Centrer">      
        
         <div class="Centrer ">    
-        <a href="Index.html"><i class="fa-solid fa-arrow-left fa-xl ArrowPosition"></i></a>        
+        <a href="index.html"><i class="fa-solid fa-arrow-left fa-xl ArrowPosition"></i></a>        
         <img src="images/logo/ohmyfood.png" class="LogoResponsivSize"  alt="Ohmyfood" >
         </div> 
 
