--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" type="text/css" href="Index.styles.css">
-            <link rel="stylesheet" media="screen and (max-width: 768px)" href="_media.css"/>
+            <link rel="stylesheet" media="screen and (max-width: 768px)" href="_media.css">
             <title>Ohmyfood Accueil</title>
 			<script src="https://kit.fontawesome.com/3313ba1e29.js" crossorigin="anonymous"></script>	<!--fontawesome icones-->
     </head>
     
-    <header class="CentrerColumn"><div></div>
+    <header class="CentrerColumn">
 
         <div class=" CentrerColumn OhmyfoodMarge"><img src="images/logo/ohmyfood.png" width="250" alt="Ohmyfood"></div> <!--Logo ohmyfood-->         
         <div class="SectionRecherche CentrerRow ">            
@@ -148,7 +148,7 @@
                 <li class="Blanc Liste"><i class="fa-sharp fa-solid fa-utensils fa-xs MargeD"></i><a class="Blanc" href="#">Proposer un restaurant</a></li>
                 <li class="Blanc Liste"><i class="fa-solid fa-handshake-angle fa-xs MargeD2"></i><a class="Blanc" href="#">Devenir partenaire</a></li>
                 <li class=" Liste"><a class="Blanc" href="#">Mentions légales</a></li>
-                <li class=" Liste"><a class="Blanc" href="mailto: Ohmyfood_contact@gmail.com">Contact</a></li>
+                <li class=" Liste"><a class="Blanc" href="mailto:Ohmyfood_contact@gmail.com">Contact</a></li>
             </ul>
                   
     </footer>
