--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" type="text/css" href="Menus.styles.css">
-            <link rel="stylesheet" media="screen and (max-width: 768px)" href="_media.css"/>
+            <link rel="stylesheet" media="screen and (max-width: 768px)" href="_media.css">
             <title>Ohmyfood Le délice des sens</title>
 			<script src="https://kit.fontawesome.com/3313ba1e29.js" crossorigin="anonymous"></script>	<!--fontawesome icones-->
     </head>
@@ -233,7 +233,7 @@
                 <li class="Blanc Liste"><i class="fa-sharp fa-solid fa-utensils fa-xs MargeD"></i><a class="Blanc" href="#">Proposer un restaurant</a></li>
                 <li class="Blanc Liste"><i class="fa-solid fa-handshake-angle fa-xs MargeD2"></i><a class="Blanc" href="#">Devenir partenaire</a></li>
                 <li class=" Liste"><a class="Blanc" href="#">Mentions légales</a></li>
-                <li class=" Liste"><a class="Blanc" href="mailto: Ohmyfood_contact@gmail.com">Contact</a></li>
+                <li class=" Liste"><a class="Blanc" href="mailto:Ohmyfood_contact@gmail.com">Contact</a></li>
             </ul>
                   
     </footer>
